--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="title_notifications">Notifications</string>
     <string name="txt_admin">Admin</string>
     <string name="pais_spinner_prompt_text">Seleccione el pais del equipo</string>
+    <string name="title_activity_equipo">EquipoActivity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_3">Tab 3</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 </resources>
